Paseto token implemented
