# docs/swagger.json
@@ -22,13 +22,6 @@
                 ],
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Player ID",
-                        "name": "id",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
                         "description": "Adds Player career",
                         "name": "playerCareer",
                         "in": "body",
@@ -71,10 +64,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "string"
-                            }
+                            "type": "string"
                         }
                     }
                 ],
@@ -312,6 +302,36 @@
                 }
             }
         },
+        "/deleteMatch": {
+            "delete": {
+                "description": "Deletes the match",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Match"
+                ],
+                "parameters": [
+                    {
+                        "description": "Match Id",
+                        "name": "matchId",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/deleteTeamByID": {
             "delete": {
                 "description": "Delete the team",
@@ -323,19 +343,13 @@
                 ],
                 "parameters": [
                     {
-                        "type": "string",
                         "description": "ID of the team",
-                        "name": "id",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "description": "ID of the user",
-                        "name": "user_id",
+                        "name": "teamId",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "object"
+                            "type": "string",
+                            "example": "{\n \"teamId\":\"string\"\n}"
                         }
                     }
                 ],
@@ -361,11 +375,12 @@
                 "parameters": [
                     {
                         "description": "Id of the team to end its inning",
-                        "name": "team_id",
+                        "name": "matchDetils",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "object"
+                            "type": "string",
+                            "example": "{\n \"matchId\":\"string\",\n \"teamId\":\"string\"\n}"
                         }
                     }
                 ],
@@ -390,12 +405,13 @@
                 ],
                 "parameters": [
                     {
-                        "description": "Id of the match to end",
-                        "name": "match_id",
+                        "description": "Id of the match to end it",
+                        "name": "matchDetils",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "object"
+                            "type": "string",
+                            "example": "{\n \"matchId\":\"string\",\n \"teamId\":\"string\"\n}"
                         }
                     }
                 ],
@@ -421,15 +437,6 @@
                 "tags": [
                     "Authentication"
                 ],
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "token generated for the user",
-                        "name": "token",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -454,12 +461,47 @@
                 ],
                 "parameters": [
                     {
-                        "description": "Id of the player",
-                        "name": "id",
+                        "description": "ID of the player",
+                        "name": "playerId",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "object"
+                            "type": "string",
+                            "example": "{\n\"playerId\":\"string\"\n}"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/sendOTP": {
+            "post": {
+                "description": "Sends a OTp to the nuber entered",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Authentication"
+                ],
+                "parameters": [
+                    {
+                        "description": "Phone Number of registered user",
+                        "name": "phoneNumber",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "{\n\"phoneNumber\":\"string\"\n}"
                         }
                     }
                 ],
@@ -503,12 +545,13 @@
                 ],
                 "parameters": [
                     {
-                        "description": "Match Id",
-                        "name": "matchId",
+                        "description": "Id of the match ",
+                        "name": "matchDetails",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "object"
+                            "type": "string",
+                            "example": "{\n \"matchId\":\"string\" \n}"
                         }
                     }
                 ],
@@ -565,11 +608,12 @@
                 "parameters": [
                     {
                         "description": "ID of the player",
-                        "name": "id",
+                        "name": "playerId",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "object"
+                            "type": "string",
+                            "example": "{\n\"playerId\":\"string\"\n}"
                         }
                     }
                 ],
@@ -594,15 +638,13 @@
                 ],
                 "parameters": [
                     {
-                        "description": "Map of key-value pairs",
-                        "name": "myMap",
+                        "description": "Id of the match whose scorecard is to be shown",
+                        "name": "matchId",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "type": "string",
+                            "example": "{\n \"matchId\":\"string\"\n}"
                         }
                     }
                 ],
@@ -628,11 +670,12 @@
                 "parameters": [
                     {
                         "description": "ID of the team",
-                        "name": "team_id",
+                        "name": "teamId",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
+                            "type": "string",
+                            "example": "{\n \"userId\":\"string\",\n \"teamId\":\"string\"\n}"
                         }
                     }
                 ],
@@ -657,11 +700,14 @@
                 ],
                 "parameters": [
                     {
-                        "type": "string",
                         "description": "ID of the User",
-                        "name": "id",
-                        "in": "query",
-                        "required": true
+                        "name": "userId",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "{\n\"userId\":\"string\"\n}"
+                        }
                     }
                 ],
                 "responses": {
@@ -718,13 +764,6 @@
                 ],
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "token generated for the user",
-                        "name": "token",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
                         "description": "user updated datas",
                         "name": "userDetails",
                         "in": "body",
@@ -776,6 +815,40 @@
                     }
                 }
             }
+        },
+        "/verifyOTP": {
+            "post": {
+                "description": "Verifies the OTP sent to the user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Authentication"
+                ],
+                "parameters": [
+                    {
+                        "description": "Phone Number of registered user and the otp sent to it",
+                        "name": "details",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "{\n\"phoneNumber\":\"string\",\n\"otp\":\"string\"\n}"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -797,7 +870,8 @@
                 "ballType",
                 "baller",
                 "batsmen",
-                "matchId"
+                "matchId",
+                "runs"
             ],
             "properties": {
                 "ballType": {
@@ -816,7 +890,16 @@
                     "type": "integer"
                 },
                 "runs": {
-                    "type": "integer"
+                    "type": "integer",
+                    "enum": [
+                        1,
+                        2,
+                        3,
+                        4,
+                        5,
+                        6,
+                        7
+                    ]
                 }
             }
         },
@@ -838,9 +921,6 @@
                 },
                 "createdAt": {
                     "type": "string"
-                },
-                "deletedAt": {
-                    "$ref": "#/definitions/gorm.DeletedAt"
                 },
                 "economy": {
                     "type": "number"
@@ -889,14 +969,11 @@
             "type": "object",
             "required": [
                 "phoneNumber",
-                "userName"
+                "username"
             ],
             "properties": {
                 "createdAt": {
                     "type": "string"
-                },
-                "deletedAt": {
-                    "$ref": "#/definitions/gorm.DeletedAt"
                 },
                 "isLoggedIn": {
                     "type": "boolean"
@@ -907,13 +984,16 @@
                 "role": {
                     "type": "string"
                 },
+                "token": {
+                    "type": "string"
+                },
                 "updatedAt": {
                     "type": "string"
                 },
-                "userName": {
+                "user_id": {
                     "type": "string"
                 },
-                "user_id": {
+                "username": {
                     "type": "string"
                 }
             }
@@ -1067,9 +1147,6 @@
                 },
                 "decision": {
                     "type": "string"
-                },
-                "deletedAt": {
-                    "$ref": "#/definitions/gorm.DeletedAt"
                 },
                 "head_team": {
                     "type": "string"
